deploy/k8s/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-test-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: App
  template:
    metadata:
      labels:
        app: App
    spec:
      containers:
      - name: app
        image: creatiwww/echo-server:amd64-latest
        ports:
        - name: webrequests
          containerPort: 5000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
