deploy/k8s/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: devops-test-app-service
  labels:
    app: App
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: App
